config/temp/main/default/objects/Test__c/Test__c.object-meta.xml
<CustomObject>
    <description>All tests available at Wellness Labs</description>
    <label>Test</label>
    <nameField>
        <label>Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>