config/temp/main/default/objects/Test__c/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <label>Sample</label>
    <referenceTo>Sample__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>