config/temp/main/default/objects/Test__c/fields/Test_Components__c.field-meta.xml
<CustomField>
    <fullName>Test_Components__c</fullName>
    <description>The different segments of the test</description>
    <label>Test Components</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>