config/temp/main/default/objects/Test__c/fields/Test_Notes__c.field-meta.xml
<CustomField>
    <fullName>Test_Notes__c</fullName>
    <label>Test Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>