config/temp/main/default/objects/Test__c/fields/Testing_Lab__c.field-meta.xml
<CustomField>
    <fullName>Testing_Lab__c</fullName>
    <label>Testing Lab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specimen Processing</fullName>
            </value>
            <value>
                <fullName>Exception Handling</fullName>
            </value>
            <value>
                <fullName>Genetics</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Virology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Tissue Bench</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>